# tdlib-obf

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  README.md  compile_commands.json  sonar-project.properties  tdlib-td-folders.diff
.trunk/: trunk.yaml
CMake/: AddCXXCompilerFlag.cmake  FindAtomics.cmake  TdSetUpCompiler.cmake
artifacts/: active_probing_nightly_observations.json
benchmark/: bench_crypto.cpp  bench_misc.cpp
docs/: CHANGE_REPORT_2026-04-20.md
memprof/: memprof_stat.cpp
obf_logic_lib/: Cargo.toml  FFI_PORTING_SUMMARY.md  obf_logic_lib.h  plan.txt
obf_logic_lib/src/: lib.rs
obf_logic_lib/tests/: codec_unit.rs  crypto_adversarial.rs  handshake_boundary_cases.rs  handshake_contract.rs  handshake_resilience.rs  pipeline_unit.rs  surface_contract.rs
tdnet/: CMakeLists.txt
tdutils/: CMakeLists.txt
test/: CMakeLists.txt  active_connection_lifecycle_cutover_failure_integration.cpp  active_connection_lifecycle_runtime_reload_integration.cpp  active_connection_lifecycle_state_machine.cpp  buffer_initialization_contract.cpp  cli_get_args_adversarial.cpp  cli_get_args_contract.cpp  connection_destination_budget_controller.cpp  connection_flow_controller.cpp  connection_flow_destination_budget_joint_gate_integration.cpp  connection_flow_runtime_policy_reload_integration.cpp  connection_lifecycle_policy.cpp  db.cpp  dialog_filter_icon_mapping_adversarial.cpp  flat_hash_table_memsize_adversarial.cpp  flat_hash_table_memsize_contract.cpp  flat_hash_table_memsize_integration.cpp  http.cpp  link.cpp  (+54 more)
(+10981 files in other folders)
