[package]
name = "obf_logic_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
hmac = "0.12"
sha2 = "0.10"
cbc = "0.1"
pkcs7 = "0.1"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ecdsa = { version = "0.14", features = ["std"] }
k256 = "0.13"
digest = "0.10"

[lib]
crate-type = ["staticlib", "cdylib"]